--- a/Lab.conf
+++ b/Lab.conf
@@ -1,5 +1,5 @@
 LAB_DESCRIPTION="Gerencia"
-LAB_AUTHOR="Bruna Amante"
+LAB_AUTHOR="Bruna Amante, Patrícia Domingos"
 LAB_EMAIL=contact@netkit.org
 LAB_WEB=http://www.netkit.org/
 
